--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,14 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.green{
+  color:green;
+  text-align:center;
+}
+.red{
+  color:red;
+  text-align: center;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
